--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,25 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Milagros Sabrina
+author: Milagros Sabrina
+email: ms.cabreralopez@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Pedagoga, orientadora educativa y psicóloga en proceso.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+linkedin_username: milascl
+# github_username:  MilaSCL
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+
+### template colors, used site-wide via css ###
+post_color: '#556B2F'
+button_color: '#ffffff'
 
 # Exclude from processing.
 # The following items will not be processed, by default.
