--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Milagros Sabrina
 author: Milagros Sabrina
 email: ms.cabreralopez@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Pedagoga, orientadora educativa y psicóloga en proceso.
+  Pedagoga, Orientadora Educativa y futura Psicóloga.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: milascl
